# DPI-ENGINE

./: README.md  gitignore  pyproject.toml
src/dpi_engine/: __init__.py  __main__.py  capture_gen.py  classification.py  cli.py  dump.py  engine.py  flow.py  inspection.py  parser.py  pcap.py  reports.py  rules.py  stats.py  tuples.py
tests/: __init__.py  conftest.py  test_classification.py  test_engine.py  test_inspection.py  test_parser.py  test_pcap.py  test_rules.py
